// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders issues and filters 1`] = `
Array [
  <div
    className="ant-breadcrumb"
    style={
      Object {
        "margin": "16px 0",
      }
    }
  >
    <span>
      <a
        className="ant-breadcrumb-link"
        href="/runs"
      >
        Runs
      </a>
      <span
        className="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        className="ant-breadcrumb-link"
      >
        Run 
        0
      </span>
      <span
        className="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>,
  <section
    className="ant-layout ant-layout-has-sider"
  >
    <section
      className="ant-layout"
      style={
        Object {
          "paddingRight": "24px",
        }
      }
    >
      <div
        className="ant-card ant-card-bordered"
      >
        <div
          className="ant-card-body"
          style={Object {}}
        >
          <div
            className="ant-skeleton ant-skeleton-active"
          >
            <div
              className="ant-skeleton-content"
            >
              <h3
                className="ant-skeleton-title"
                style={
                  Object {
                    "width": "38%",
                  }
                }
              />
              <ul
                className="ant-skeleton-paragraph"
              >
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": undefined,
                    }
                  }
                />
                <li
                  style={
                    Object {
                      "width": "61%",
                    }
                  }
                />
              </ul>
            </div>
          </div>
        </div>
      </div>
    </section>
    <aside
      className="ant-layout-sider ant-layout-sider-dark"
      style={
        Object {
          "flex": "0 0 300px",
          "maxWidth": "300px",
          "minWidth": "300px",
          "width": "300px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <button
            className="ant-btn"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": "100%",
              }
            }
            type="button"
          >
            <span
              aria-label="filter"
              className="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
            <span>
              Filter...
            </span>
          </button>
        </div>
        <ul
          className="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
          onMouseEnter={[Function]}
          onTransitionEnd={[Function]}
          role="menu"
          style={
            Object {
              "borderRight": 0,
            }
          }
        >
          <div
            className="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            style={
              Object {
                "padding": "12px 12px 0 12px",
                "width": "100%",
              }
            }
          >
            <div
              className="ant-select-selector"
              onMouseDown={[Function]}
            >
              <span
                className="ant-select-selection-search"
              >
                <span
                  className="ant-input-affix-wrapper ant-input-search ant-select-selection-search-input"
                  onMouseUp={[Function]}
                  style={
                    Object {
                      "opacity": null,
                    }
                  }
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autoComplete="off"
                    className="ant-input"
                    id="rc_select_TEST_OR_SSR"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onPaste={[Function]}
                    placeholder="saved filter"
                    readOnly={false}
                    role="combobox"
                    style={null}
                    type="search"
                    unselectable={null}
                    value=""
                  />
                  <span
                    className="ant-input-suffix"
                  >
                    <span
                      aria-label="search"
                      className="anticon anticon-search ant-input-search-icon"
                      onClick={[Function]}
                      role="img"
                      tabIndex={-1}
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <li
            className="ant-menu-submenu ant-menu-submenu-inline"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
          >
            <div
              aria-expanded={false}
              aria-haspopup="true"
              className="ant-menu-submenu-title"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              style={
                Object {
                  "paddingLeft": 24,
                }
              }
            >
              <span
                aria-label="setting"
                className="anticon anticon-setting"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="setting"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                  />
                </svg>
              </span>
              <span>
                Filter options
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            className="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-disabled"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
          >
            <div
              aria-expanded={true}
              aria-haspopup="true"
              aria-owns="recents$Menu"
              className="ant-menu-submenu-title"
              role="button"
              style={
                Object {
                  "paddingLeft": 24,
                }
              }
            >
              <span
                aria-label="field-time"
                className="anticon anticon-field-time"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="field-time"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <defs>
                    <style />
                  </defs>
                  <path
                    d="M945 412H689c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h256c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM811 548H689c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h122c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM477.3 322.5H434c-6.2 0-11.2 5-11.2 11.2v248c0 3.6 1.7 6.9 4.6 9l148.9 108.6c5 3.6 12 2.6 15.6-2.4l25.7-35.1v-.1c3.6-5 2.5-12-2.5-15.6l-126.7-91.6V333.7c.1-6.2-5-11.2-11.1-11.2z"
                  />
                  <path
                    d="M804.8 673.9H747c-5.6 0-10.9 2.9-13.9 7.7a321 321 0 01-44.5 55.7 317.17 317.17 0 01-101.3 68.3c-39.3 16.6-81 25-124 25-43.1 0-84.8-8.4-124-25-37.9-16-72-39-101.3-68.3s-52.3-63.4-68.3-101.3c-16.6-39.2-25-80.9-25-124 0-43.1 8.4-84.7 25-124 16-37.9 39-72 68.3-101.3 29.3-29.3 63.4-52.3 101.3-68.3 39.2-16.6 81-25 124-25 43.1 0 84.8 8.4 124 25 37.9 16 72 39 101.3 68.3a321 321 0 0144.5 55.7c3 4.8 8.3 7.7 13.9 7.7h57.8c6.9 0 11.3-7.2 8.2-13.3-65.2-129.7-197.4-214-345-215.7-216.1-2.7-395.6 174.2-396 390.1C71.6 727.5 246.9 903 463.2 903c149.5 0 283.9-84.6 349.8-215.8a9.18 9.18 0 00-8.2-13.3z"
                  />
                </svg>
              </span>
              <span>
                Recent filters
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
            <ul
              className="ant-menu ant-menu-sub ant-menu-inline"
              id="recents$Menu"
              role="menu"
              style={Object {}}
            />
          </li>
        </ul>
      </div>
    </aside>
  </section>,
]
`;

exports[`Renders issues and filters 2`] = `
Array [
  <div
    className="ant-breadcrumb"
    style={
      Object {
        "margin": "16px 0",
      }
    }
  >
    <span>
      <a
        className="ant-breadcrumb-link"
        href="/runs"
      >
        Runs
      </a>
      <span
        className="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
    <span>
      <span
        className="ant-breadcrumb-link"
      >
        Run 
        0
      </span>
      <span
        className="ant-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>,
  <section
    className="ant-layout ant-layout-has-sider"
  >
    <section
      className="ant-layout"
      style={
        Object {
          "paddingRight": "24px",
        }
      }
    >
      <div
        className="ant-card ant-card-bordered ant-card-small"
      >
        <div
          className="ant-card-head"
          style={Object {}}
        >
          <div
            className="ant-card-head-wrapper"
          >
            <div
              className="ant-card-head-title"
            >
              <span
                aria-label="fire"
                className="anticon anticon-fire"
                role="img"
                style={
                  Object {
                    "marginRight": ".5em",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="fire"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M834.1 469.2A347.49 347.49 0 00751.2 354l-29.1-26.7a8.09 8.09 0 00-13 3.3l-13 37.3c-8.1 23.4-23 47.3-44.1 70.8-1.4 1.5-3 1.9-4.1 2-1.1.1-2.8-.1-4.3-1.5-1.4-1.2-2.1-3-2-4.8 3.7-60.2-14.3-128.1-53.7-202C555.3 171 510 123.1 453.4 89.7l-41.3-24.3c-5.4-3.2-12.3 1-12 7.3l2.2 48c1.5 32.8-2.3 61.8-11.3 85.9-11 29.5-26.8 56.9-47 81.5a295.64 295.64 0 01-47.5 46.1 352.6 352.6 0 00-100.3 121.5A347.75 347.75 0 00160 610c0 47.2 9.3 92.9 27.7 136a349.4 349.4 0 0075.5 110.9c32.4 32 70 57.2 111.9 74.7C418.5 949.8 464.5 959 512 959s93.5-9.2 136.9-27.3A348.6 348.6 0 00760.8 857c32.4-32 57.8-69.4 75.5-110.9a344.2 344.2 0 0027.7-136c0-48.8-10-96.2-29.9-140.9zM713 808.5c-53.7 53.2-125 82.4-201 82.4s-147.3-29.2-201-82.4c-53.5-53.1-83-123.5-83-198.4 0-43.5 9.8-85.2 29.1-124 18.8-37.9 46.8-71.8 80.8-97.9a349.6 349.6 0 0058.6-56.8c25-30.5 44.6-64.5 58.2-101a240 240 0 0012.1-46.5c24.1 22.2 44.3 49 61.2 80.4 33.4 62.6 48.8 118.3 45.8 165.7a74.01 74.01 0 0024.4 59.8 73.36 73.36 0 0053.4 18.8c19.7-1 37.8-9.7 51-24.4 13.3-14.9 24.8-30.1 34.4-45.6 14 17.9 25.7 37.4 35 58.4 15.9 35.8 24 73.9 24 113.1 0 74.9-29.5 145.4-83 198.4z"
                  />
                </svg>
              </span>
              Issue 
              1
            </div>
            <div
              className="ant-card-extra"
            >
              <a
                className="ant-typography"
                href="/run/0/issue/11"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Traces
              </a>
            </div>
          </div>
        </div>
        <div
          className="ant-card-body"
          style={Object {}}
        >
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Code
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <span
                  className="ant-typography"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "WebkitLineClamp": null,
                    }
                  }
                >
                  <code>
                    6065
                     : 
                    this is a test warning message
                  </code>
                </span>
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Description
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                This is a test issue
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Status
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <span
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="ant-select ant-select-sm ant-select-single ant-select-show-arrow"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    style={
                      Object {
                        "minWidth": "130px",
                      }
                    }
                  >
                    <div
                      className="ant-select-selector"
                      onMouseDown={[Function]}
                    >
                      <span
                        className="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                          aria-autocomplete="list"
                          aria-controls="rc_select_TEST_OR_SSR_list"
                          aria-haspopup="listbox"
                          aria-owns="rc_select_TEST_OR_SSR_list"
                          autoComplete="off"
                          className="ant-select-selection-search-input"
                          id="rc_select_TEST_OR_SSR"
                          onChange={[Function]}
                          onCompositionEnd={[Function]}
                          onCompositionStart={[Function]}
                          onKeyDown={[Function]}
                          onMouseDown={[Function]}
                          onPaste={[Function]}
                          readOnly={true}
                          role="combobox"
                          style={
                            Object {
                              "opacity": 0,
                            }
                          }
                          type="search"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        className="ant-select-selection-item"
                        title="Uncategorized"
                      >
                        Uncategorized
                      </span>
                    </div>
                    <span
                      aria-hidden={true}
                      className="ant-select-arrow"
                      onMouseDown={[Function]}
                      style={
                        Object {
                          "WebkitUserSelect": "none",
                          "userSelect": "none",
                        }
                      }
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        className="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          className=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </span>
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                First seen
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <span
                  className="ant-typography"
                  style={
                    Object {
                      "WebkitLineClamp": null,
                    }
                  }
                >
                  <code>
                    2001-02-24T16:31:12
                  </code>
                </span>
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Callable
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <span
                  className="ant-typography"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "WebkitLineClamp": null,
                      "wordBreak": "break-all",
                    }
                  }
                >
                  <code>
                    run.test
                  </code>
                </span>
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Location
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <span
                  aria-label="code"
                  className="anticon anticon-code"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onTouchStart={[Function]}
                  role="img"
                  tabIndex={-1}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="code"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
                      fill="#1890ff"
                    />
                    <path
                      d="M184 840h656V184H184v656zm339.5-223h185c4.1 0 7.5 3.6 7.5 8v48c0 4.4-3.4 8-7.5 8h-185c-4.1 0-7.5-3.6-7.5-8v-48c0-4.4 3.4-8 7.5-8zM308 610.3c0-2.3 1.1-4.6 2.9-6.1L420.7 512l-109.8-92.2a7.63 7.63 0 01-2.9-6.1V351c0-6.8 7.9-10.5 13.1-6.1l192 160.9c3.9 3.2 3.9 9.1 0 12.3l-192 161c-5.2 4.4-13.1.7-13.1-6.1v-62.7z"
                      fill="#e6f7ff"
                    />
                    <path
                      d="M321.1 679.1l192-161c3.9-3.2 3.9-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48z"
                      fill="#1890ff"
                    />
                  </svg>
                </span>
                 
                <span
                  className="ant-typography"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "WebkitLineClamp": null,
                      "wordBreak": "break-all",
                    }
                  }
                >
                  <code>
                    tests.js
                  </code>
                </span>
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Sources
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <span
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="ant-tag ant-tag-green"
                    style={
                      Object {
                        "backgroundColor": undefined,
                      }
                    }
                  >
                    TestSource
                  </span>
                </span>
                 
                at
                 
                <span
                  className="ant-typography"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "WebkitLineClamp": null,
                    }
                  }
                >
                  <u>
                    minimum distance 
                    0
                    .
                  </u>
                </span>
                <br />
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "marginTop": ".5em",
                    }
                  }
                >
                  <span
                    className="ant-tag"
                    style={
                      Object {
                        "backgroundColor": undefined,
                      }
                    }
                  >
                    TestSource
                  </span>
                </div>
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Sinks
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <span
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="ant-tag ant-tag-red"
                    style={
                      Object {
                        "backgroundColor": undefined,
                      }
                    }
                  >
                    TestSink
                  </span>
                </span>
                 
                at
                 
                <span
                  className="ant-typography"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "WebkitLineClamp": null,
                    }
                  }
                >
                  <u>
                    minimum distance 
                    0
                    .
                  </u>
                </span>
                <br />
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "marginTop": ".5em",
                    }
                  }
                >
                  <span
                    className="ant-tag"
                    style={
                      Object {
                        "backgroundColor": undefined,
                      }
                    }
                  >
                    TestSink
                  </span>
                </div>
              </span>
            </div>
          </div>
          <div
            className="ant-row"
            style={
              Object {
                "marginBottom": 4,
                "marginLeft": -4,
                "marginRight": -4,
                "marginTop": -4,
              }
            }
          >
            <div
              className="ant-col ant-col-4"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                  "textAlign": "right",
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                Features
              </span>
            </div>
            <div
              className="ant-col ant-col-20"
              style={
                Object {
                  "paddingBottom": 4,
                  "paddingLeft": 4,
                  "paddingRight": 4,
                  "paddingTop": 4,
                }
              }
            >
              <span
                className="ant-typography ant-typography-secondary"
                style={
                  Object {
                    "WebkitLineClamp": null,
                  }
                }
              >
                <div
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="ant-tag"
                    style={
                      Object {
                        "backgroundColor": undefined,
                      }
                    }
                  >
                    always-via:test
                  </span>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
      <br />
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <button
          className="ant-btn ant-btn-dashed"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <span>
            Load More...
          </span>
        </button>
      </div>
    </section>
    <aside
      className="ant-layout-sider ant-layout-sider-dark"
      style={
        Object {
          "flex": "0 0 300px",
          "maxWidth": "300px",
          "minWidth": "300px",
          "width": "300px",
        }
      }
    >
      <div
        className="ant-layout-sider-children"
      >
        <div
          style={
            Object {
              "marginBottom": "10px",
            }
          }
        >
          <button
            className="ant-btn"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": "100%",
              }
            }
            type="button"
          >
            <span
              aria-label="filter"
              className="anticon anticon-filter"
              role="img"
            >
              <svg
                aria-hidden="true"
                className=""
                data-icon="filter"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880.1 154H143.9c-24.5 0-39.8 26.7-27.5 48L349 597.4V838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V597.4L907.7 202c12.2-21.3-3.1-48-27.6-48zM603.4 798H420.6V642h182.9v156zm9.6-236.6l-9.5 16.6h-183l-9.5-16.6L212.7 226h598.6L613 561.4z"
                />
              </svg>
            </span>
            <span>
              Filter...
            </span>
          </button>
        </div>
        <ul
          className="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
          onMouseEnter={[Function]}
          onTransitionEnd={[Function]}
          role="menu"
          style={
            Object {
              "borderRight": 0,
            }
          }
        >
          <div
            className="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            style={
              Object {
                "padding": "12px 12px 0 12px",
                "width": "100%",
              }
            }
          >
            <div
              className="ant-select-selector"
              onMouseDown={[Function]}
            >
              <span
                className="ant-select-selection-search"
              >
                <span
                  className="ant-input-affix-wrapper ant-input-search ant-select-selection-search-input"
                  onMouseUp={[Function]}
                  style={
                    Object {
                      "opacity": null,
                    }
                  }
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autoComplete="off"
                    className="ant-input"
                    id="rc_select_TEST_OR_SSR"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onCompositionEnd={[Function]}
                    onCompositionStart={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDown={[Function]}
                    onPaste={[Function]}
                    placeholder="saved filter"
                    readOnly={false}
                    role="combobox"
                    style={null}
                    type="search"
                    unselectable={null}
                    value=""
                  />
                  <span
                    className="ant-input-suffix"
                  >
                    <span
                      aria-label="search"
                      className="anticon anticon-search ant-input-search-icon"
                      onClick={[Function]}
                      role="img"
                      tabIndex={-1}
                    >
                      <svg
                        aria-hidden="true"
                        className=""
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <li
            className="ant-menu-submenu ant-menu-submenu-inline"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
          >
            <div
              aria-expanded={false}
              aria-haspopup="true"
              className="ant-menu-submenu-title"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              style={
                Object {
                  "paddingLeft": 24,
                }
              }
            >
              <span
                aria-label="setting"
                className="anticon anticon-setting"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="setting"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M924.8 625.7l-65.5-56c3.1-19 4.7-38.4 4.7-57.8s-1.6-38.8-4.7-57.8l65.5-56a32.03 32.03 0 009.3-35.2l-.9-2.6a443.74 443.74 0 00-79.7-137.9l-1.8-2.1a32.12 32.12 0 00-35.1-9.5l-81.3 28.9c-30-24.6-63.5-44-99.7-57.6l-15.7-85a32.05 32.05 0 00-25.8-25.7l-2.7-.5c-52.1-9.4-106.9-9.4-159 0l-2.7.5a32.05 32.05 0 00-25.8 25.7l-15.8 85.4a351.86 351.86 0 00-99 57.4l-81.9-29.1a32 32 0 00-35.1 9.5l-1.8 2.1a446.02 446.02 0 00-79.7 137.9l-.9 2.6c-4.5 12.5-.8 26.5 9.3 35.2l66.3 56.6c-3.1 18.8-4.6 38-4.6 57.1 0 19.2 1.5 38.4 4.6 57.1L99 625.5a32.03 32.03 0 00-9.3 35.2l.9 2.6c18.1 50.4 44.9 96.9 79.7 137.9l1.8 2.1a32.12 32.12 0 0035.1 9.5l81.9-29.1c29.8 24.5 63.1 43.9 99 57.4l15.8 85.4a32.05 32.05 0 0025.8 25.7l2.7.5a449.4 449.4 0 00159 0l2.7-.5a32.05 32.05 0 0025.8-25.7l15.7-85a350 350 0 0099.7-57.6l81.3 28.9a32 32 0 0035.1-9.5l1.8-2.1c34.8-41.1 61.6-87.5 79.7-137.9l.9-2.6c4.5-12.3.8-26.3-9.3-35zM788.3 465.9c2.5 15.1 3.8 30.6 3.8 46.1s-1.3 31-3.8 46.1l-6.6 40.1 74.7 63.9a370.03 370.03 0 01-42.6 73.6L721 702.8l-31.4 25.8c-23.9 19.6-50.5 35-79.3 45.8l-38.1 14.3-17.9 97a377.5 377.5 0 01-85 0l-17.9-97.2-37.8-14.5c-28.5-10.8-55-26.2-78.7-45.7l-31.4-25.9-93.4 33.2c-17-22.9-31.2-47.6-42.6-73.6l75.5-64.5-6.5-40c-2.4-14.9-3.7-30.3-3.7-45.5 0-15.3 1.2-30.6 3.7-45.5l6.5-40-75.5-64.5c11.3-26.1 25.6-50.7 42.6-73.6l93.4 33.2 31.4-25.9c23.7-19.5 50.2-34.9 78.7-45.7l37.9-14.3 17.9-97.2c28.1-3.2 56.8-3.2 85 0l17.9 97 38.1 14.3c28.7 10.8 55.4 26.2 79.3 45.8l31.4 25.8 92.8-32.9c17 22.9 31.2 47.6 42.6 73.6L781.8 426l6.5 39.9zM512 326c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 614c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 502c0-29.9 11.7-58 32.8-79.2C454 401.6 482.1 390 512 390c29.9 0 58 11.6 79.2 32.8A111.6 111.6 0 01624 502c0 29.9-11.7 58-32.8 79.2z"
                  />
                </svg>
              </span>
              <span>
                Filter options
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            className="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-disabled"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            role="menuitem"
          >
            <div
              aria-expanded={true}
              aria-haspopup="true"
              aria-owns="recents$Menu"
              className="ant-menu-submenu-title"
              role="button"
              style={
                Object {
                  "paddingLeft": 24,
                }
              }
            >
              <span
                aria-label="field-time"
                className="anticon anticon-field-time"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="field-time"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <defs>
                    <style />
                  </defs>
                  <path
                    d="M945 412H689c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h256c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM811 548H689c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h122c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8zM477.3 322.5H434c-6.2 0-11.2 5-11.2 11.2v248c0 3.6 1.7 6.9 4.6 9l148.9 108.6c5 3.6 12 2.6 15.6-2.4l25.7-35.1v-.1c3.6-5 2.5-12-2.5-15.6l-126.7-91.6V333.7c.1-6.2-5-11.2-11.1-11.2z"
                  />
                  <path
                    d="M804.8 673.9H747c-5.6 0-10.9 2.9-13.9 7.7a321 321 0 01-44.5 55.7 317.17 317.17 0 01-101.3 68.3c-39.3 16.6-81 25-124 25-43.1 0-84.8-8.4-124-25-37.9-16-72-39-101.3-68.3s-52.3-63.4-68.3-101.3c-16.6-39.2-25-80.9-25-124 0-43.1 8.4-84.7 25-124 16-37.9 39-72 68.3-101.3 29.3-29.3 63.4-52.3 101.3-68.3 39.2-16.6 81-25 124-25 43.1 0 84.8 8.4 124 25 37.9 16 72 39 101.3 68.3a321 321 0 0144.5 55.7c3 4.8 8.3 7.7 13.9 7.7h57.8c6.9 0 11.3-7.2 8.2-13.3-65.2-129.7-197.4-214-345-215.7-216.1-2.7-395.6 174.2-396 390.1C71.6 727.5 246.9 903 463.2 903c149.5 0 283.9-84.6 349.8-215.8a9.18 9.18 0 00-8.2-13.3z"
                  />
                </svg>
              </span>
              <span>
                Recent filters
              </span>
              <i
                className="ant-menu-submenu-arrow"
              />
            </div>
            <ul
              className="ant-menu ant-menu-sub ant-menu-inline"
              id="recents$Menu"
              role="menu"
              style={Object {}}
            />
          </li>
        </ul>
      </div>
    </aside>
  </section>,
]
`;
